// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.loading is false, state.requested is true 1`] = `
<div
  className="flex-none layout-row layout-align-center-center document_downloader upload_btn_wrapper "
  data-for="RANDOM_KEY_3"
  data-tip="FOO_TOOLTIP"
>
  <RoundButton
    active={true}
    back={false}
    classNames="ready"
    disabled={false}
    flexContainer="100"
    handleDisabled={null}
    handleNext={[Function]}
    icon=""
    iconClass=""
    inverse={false}
    size="small"
    text="Download"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;

exports[`props.loading is true, state.requested is true 1`] = `
<div
  className="flex-none layout-row layout-align-center-center document_downloader upload_btn_wrapper "
  data-for="RANDOM_KEY_5"
  data-tip="FOO_TOOLTIP"
>
  <LoadingSpinner
    size="small"
  />
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-none layout-row layout-align-center-center document_downloader upload_btn_wrapper "
  data-for="RANDOM_KEY_0"
  data-tip="FOO_TOOLTIP"
>
  <RoundButton
    active={true}
    back={false}
    classNames="request"
    disabled={false}
    flexContainer="100"
    handleDisabled={null}
    handleNext={[Function]}
    icon=""
    iconClass=""
    inverse={false}
    size="small"
    text="Download"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;

exports[`square is true 1`] = `
<div
  className="flex-none layout-row layout-align-center-center document_downloader upload_btn_wrapper "
  data-for="RANDOM_KEY_1"
  data-tip="FOO_TOOLTIP"
>
  <SquareButton
    active={true}
    back={false}
    border={true}
    classNames="request"
    disabled={false}
    handleDisabled={null}
    handleNext={[Function]}
    icon=""
    iconClass=""
    size="small"
    text="Download"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;
